--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -1,5 +1,8 @@
 /* $deep_purple: #2C0042; */
 
+// Font
+$font-mono: "SF Mono","Fira Code","Fira Mono","Roboto Mono",monospace;
+
 // Colors
 $primary: #2C0042;
 $light-purple: #C3A9D0;
