--- a/src/styles/components/_navbar.scss
+++ b/src/styles/components/_navbar.scss
@@ -1,8 +1,80 @@
+.navbar__head {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: fixed;
+    padding: 0px 50px;
+    box-sizing: border-box;
+    background-color: $primary;
+    // backdrop-filter: blur(10px);
+    top: 0px;
+    width: 100%;
+    height: 100px;
+    transition: all 0.3s ease;
+    z-index: 11;
+}
 .navbar__container {
     display: flex;
-    flex-direction: row;
-    div {
-        border: 2px;
-        flex-grow: 1;
+    justify-content: space-between;
+    align-items: center;
+    position: relative;
+    width: 100%;
+    color: $light-purple;
+    font-family: $font-mono;
+    z-index: 12;
+}
+.navbar__logo {
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+    transition: all .3s ease;
+    &:hover{
+        color: lighten($color: $light-purple, $amount: 20);
     }
 }
+.navbar__content {
+    display: flex;
+    align-items: center;
+    div{
+        margin: 0px 15px;
+        position: relative;
+        font-size: 14px;
+        font-family: $font-mono;
+        transition: all .3s ease;
+        cursor: pointer;
+        &:hover{
+            color: lighten($color: $light-purple, $amount: 20);
+        }
+    }
+}
+// @media screen (max-width: 1080px) {
+//   .navbar__head {
+//       padding: 0 40px;
+//   }
+// }
+
+@media(prefers-reduced-motion: no-preference) {
+    .navbar__head{
+
+    }
+}
+// @media (prefers-reduced-motion: no-preference) {
+//     ${props =>
+//     props.scrollDirection === 'up' &&
+//       !props.scrolledToTop &&
+//       css`
+//         height: 100px;
+//         transform: translateY(0px);
+//         background-color: rgba(10, 25, 47, 0.85);
+//         box-shadow: 0 10px 30px -10px var(--navy-shadow);
+//       `};
+
+//     ${props =>
+//     props.scrollDirection === 'down' &&
+//       !props.scrolledToTop &&
+//       css`
+//         height: 70px;
+//         transform: translateY(calc(var(--nav-scroll-height) * -1));
+//         box-shadow: 0 10px 30px -10px var(--navy-shadow);
+//       `};
+//   }
