--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -1,28 +1,40 @@
-*{
+* {
     font-family: Helvetica, Arial, sans-serif;
     margin: 0px;
 }
 
-html, body{
+html, body {
     height: 100vh;
     width: 100vw;
 }
+body {
+    margin: 0px;
+    width: 100%;
+    background-color: $primary;
+    overflow-x: hidden;
+}
+section {
+    color: $main-text;
+    margin: 0px auto;
+    padding: 100px 0px;
+    max-width: 1000px;
+}
 
-main{
+main {
     width: 100%;
 }
-.mt-1{
+.mt-1 {
     margin-top: 5px;
 }
-.mt-5{
+.mt-5 {
     margin-top: 20px;
 }
-.mb-1{
+.mb-1 {
     margin-bottom: 5px;
 }
-.mb-5{
+.mb-5 {
     margin-bottom: 20px;
 }
-.pointer{
+.pointer {
     cursor: pointer;
 }
