--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -2,13 +2,15 @@
 
 // Font
 $font-mono: "SF Mono","Fira Code","Fira Mono","Roboto Mono",monospace;
+$font-cal: "Calibre","Inter","San Francisco","SF Pro Text",-apple-system,system-ui,sans-serif;
 
 // Colors
 $primary: #2C0042;
 $light-purple: #C3A9D0;
+$main-text: #DEC6E9;
 $white: #fff;
 
 
 /* color:#D07BFB; */
 /* color: #C3A9D0; posible logo */
-/* color: #B6ACBB; */
+/* color: #DEC6E9; */
