--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -8,9 +8,12 @@ $font-cal: "Calibre","Inter","San Francisco","SF Pro Text",-apple-system,system-
 $primary: #2C0042;
 $light-purple: #C3A9D0;
 $main-text: #DEC6E9;
-$white: #fff;
 
 
 /* color:#D07BFB; */
 /* color: #C3A9D0; posible logo */
 /* color: #DEC6E9; */
+
+// color: #4a2667; background
+// background: linear-gradient(135deg, #aa3bb1, #582a7e);
+// color: #51256f; text
