--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -19,6 +19,36 @@ section {
     padding: 100px 0px;
     max-width: 1000px;
 }
+.section-title {
+    display: flex;
+    width: 100%;
+    align-items: center;
+    position: relative;
+    margin: 10px 0px 40px;
+    font-size: 25px;
+    white-space: nowrap;
+    &::before {
+        content: "";
+        width: 50px;
+        height: 1px;
+        display: block;
+        position: relative;
+        background-color: white;
+        margin-right: 10px;
+    }
+    &::after {
+        content: "";
+        width: 300px;
+        height: 1px;
+        display: block;
+        position: relative;
+        background-color: white;
+        margin-left: 10px;
+    }
+}
+p {
+    margin: 0px 0px 15px;
+}
 
 main {
     width: 100%;
@@ -37,4 +67,9 @@ main {
 }
 .pointer {
     cursor: pointer;
+}
+@media (max-width: 1080px) {
+    .section-title::after {
+        width: 200px;
+    }
 }
