--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -6,10 +6,17 @@ $font-cal: "Calibre","Inter","San Francisco","SF Pro Text",-apple-system,system-
 
 // Colors
 $primary: #2C0042;
-$light-purple: #C3A9D0;
-$main-text: #DEC6E9;
+$light-purple: #93329E;
+$main-text: #B4AEE8;
+
+// $primary: #2C0042;
+// $light-purple: #C3A9D0;
+// $main-text: #DEC6E9;
 
 
+// #2C0042 #93329E #B4AEE8  Primera paleta
+// #440A67 #93329E #B4AEE8  Paleta alternativa
+// #4C0070 #8A00CF #750C4C  Tonos para testear
 /* color:#D07BFB; */
 /* color: #C3A9D0; posible logo */
 /* color: #DEC6E9; */
