--- a/src/styles/components/_home.scss
+++ b/src/styles/components/_home.scss
@@ -7,7 +7,7 @@
     padding: 0px;
     h1 {
         margin: 0px 0px 30px 4px;
-        color: $light-purple;
+        color: lighten($color: $light-purple, $amount:20);
         font-family: $font-mono;
         font-weight: 300;
         font-size: 20px;
