--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -5,4 +5,4 @@
 @import './components/home';
 @import './components/navbar';
 @import './components/main';
-@import './components/about'
+@import './components/about';
