Added profile picture to the about

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -18,6 +18,7 @@ section {
     margin: 0px auto;
     padding: 100px 0px;
     max-width: 1000px;
+    box-sizing: border-box;
 }
 .section-title {
     display: flex;
