--- a/src/styles/components/_main.scss
+++ b/src/styles/components/_main.scss
@@ -6,3 +6,36 @@
     padding-right: 200px;
     margin: 0px auto;
 }
+
+.main__footer {
+    display: flex;
+    justify-content: center;
+    padding: 50px;
+    color: $main-text;
+    font-size: 14px;
+    font-family: $font-mono;
+}
+
+.main__arrow-up {
+    cursor: pointer;
+    position: fixed;
+    z-index: 20;
+    width: 48px;
+    right: 60px;
+    left: auto;
+    bottom: 30px;
+    transition: all .3s ease-in-out;
+    transform: translateY(0%);
+
+    img {
+        filter: $icon-primary
+    }
+
+    &:hover {
+        transform: translateY(-5%);
+
+        img {
+            filter: $icon-hover
+        }
+    }
+}
