--- a/src/styles/components/_experience.scss
+++ b/src/styles/components/_experience.scss
@@ -1,48 +1,160 @@
-.experience__element{
+.experience__element {
     background-color: darken($color: $light-purple, $amount: 15);
-    box-sizing: border-box;    
+    box-sizing: border-box;
     max-width: 350px;
     border-radius: 5px;
     padding: 20px;
+    margin-top: 20px;
     transition: all .3s ease-in-out;
     transform: translateY(0%);
-    h3{
+
+    h3 {
         padding-bottom: 10px;
         transition: all .3s ease-in-out;
     }
-    &:hover{
+
+    &:hover {
         transform: translateY(-5%);
-        h3{
+
+        h3 {
             color: lighten($color: $main-text, $amount: 15);
         }
-        .experience__icon-folder{
+
+        .experience__icon-folder {
             filter: $icon-hover
         }
     }
-    
+
 }
-.experience__header-container{
+
+.experience__header-container {
     justify-content: space-between;
     align-items: center;
     display: flex;
     padding-bottom: 10px;
 }
-.experience__icon-external-link{
+
+.experience__icon-external-link {
     width: 25px;
     filter: $icon-primary
 }
-.experience__icon-folder{
+
+.experience__icon-folder {
     width: 40px;
     transition: all .3s ease-in-out;
     filter: $icon-primary
 }
-.experience__footer{
+
+.experience__footer {
     display: flex;
     justify-content: left;
     font-size: 14px;
-    
-    span{
+
+    span {
         padding-right: 10px;
-        font-family: $font-mono !important;
+        font-family: $font-mono  !important;
+    }
+}
+
+// Modal
+.experience__element-modal {
+    display: block;
+    position: fixed;
+    left: 0;
+    top: 0;
+    z-index: 30;
+    padding-top: 100px;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.5);
+    transition: all .3s ease-in-out;
+}
+.experience__modal-container{
+    background-color: $main-text;
+    color: $primary;
+    margin: auto;
+    padding: 20px;
+    border-radius: 5px;
+    width: 60%;
+    transition: all .3s ease-in-out;
+    display: flex;
+    flex-direction: column;
+}
+.experience__modal-close{
+    width: 50px;
+    background-color: transparent;
+    justify-content: center;
+    cursor: pointer;
+    margin-bottom: 5px;
+    margin-right: 0;
+    margin-left:auto;
+
+}
+.experience__carousel{
+    display: grid;
+    grid-template-columns: auto auto auto;
+    gap: 10px;
+    justify-content: center;
+    align-items: center;
+}
+.experience__carousel-slide{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: black;
+    img {
+        width: 100%;
+        object-fit: cover;
+    }
+}
+.hidden{
+    display: none;
+}
+
+.experience__carousel-prev, .experience__carousel-next{
+    cursor: pointer;
+    width: auto;
+    padding: 16px;
+    color: $light-purple;
+    font-weight: bold;
+    font-size: 18px;
+    transition: all 0.3s ease-in-out;
+    border-radius: 4px;
+    user-select: none;
+    border: solid $light-purple 2px;
+    &:hover{
+        background-color: $primary;
+        color: $main-text;
+    }
+}
+.experience__carousel-selector{
+    // background-color: #ccc;
+    text-align: center;
+}
+.experience__carousel-quadrate{
+    cursor: pointer;
+    height: 6px;
+    width: 50px;
+    margin: 10px 4px 0px 4px;
+    background-color: $primary;
+    display: inline-block;
+    transition: all .3s ease-in-out;
+    border-radius: 4px;
+    &:hover, .active{
+        background-color: $light-purple;
+    }
+}
+.experience__paragraph{
+    width: 100%;
+    margin-top: 15px;
+    text-align: center;
+}
+
+@media screen and (max-width:900px) {
+    .experience__modal-container{
+        width: 100%;
     }
 }
