--- a/src/styles/components/_contact.scss
+++ b/src/styles/components/_contact.scss
@@ -1,20 +1,55 @@
+.contact__section{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;    
+}
+.contact__title {
+    display: flex;
+    width: 100%;
+    align-items: center;
+    position: relative;
+    margin: 20px 0px 40px;
+    font-size: 25px;
+    white-space: nowrap;
+    &::before {
+        content: "";
+        width: 160px;
+        height: 1px;
+        display: block;
+        position: relative;
+        background-color: white;
+        margin-right: 10px;
+    }
+    &::after {
+        content: "";
+        width: 160px;
+        height: 1px;
+        display: block;
+        position: relative;
+        background-color: white;
+        margin-left: 10px;
+    }
+}
 .contact__content{
     p{
-        margin: 20px 0px 30px;
+        margin: 0px 0px 30px;
         max-width: 600px;
         line-height: 1.5;
     }
 }
 .contact__form{
+    width: 100%;
     max-width: 600px;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    
 }
 .contact__div-grid{
     display: grid;
     grid-template-columns: repeat(2, minmax(0, 0.8fr));
-    gap: 30px;
+    gap: 10px;
 }
 .contact__input{
     width: 100%;
@@ -43,7 +78,6 @@
     font-weight: bold;
     color: $light-purple;
     padding: 10px 30px;
-    margin-right: -20px;
     cursor: pointer;
     display: flex;
     float: right;
