--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -12,6 +12,9 @@ $main-text: #B4AEE8;
 // Icons colors
 $icon-primary: invert(77%) sepia(3%) saturate(3453%) hue-rotate(206deg) brightness(92%) contrast(98%);
 $icon-hover: invert(88%) sepia(3%) saturate(3453%) hue-rotate(206deg) brightness(100%) contrast(98%);
+
+$icon-rev-color: invert(4%) sepia(48%) saturate(7377%) hue-rotate(282deg) brightness(104%) contrast(113%);
+$icon-rev-color-hover: invert(21%) sepia(73%) saturate(2189%) hue-rotate(275deg) brightness(95%) contrast(87%);
 // $icon-hover: invert(23%) sepia(69%) saturate(1757%) hue-rotate(269deg) brightness(98%) contrast(93%);
 
 // $primary: #2C0042;
