--- a/src/styles/components/_about.scss
+++ b/src/styles/components/_about.scss
@@ -1,16 +1,18 @@
 .about__content {
     display: grid;
-    grid-template-columns: 3fr 2fr;
+    grid-template-columns: 4fr 2fr;
     gap: 50px;
+    transition: all .3s ease-in-out;
 }
 .about__skills-list {
     display: grid;
-    grid-template-columns: repeat(2, minmax(140px, 200px));
+    grid-template-columns: repeat(2, minmax(80px, 200px));
     gap: 5px 10px;
     padding: 0px;
     margin: 20px 20px 0px;
     overflow: hidden;
     list-style: none;
+    box-sizing: border-box;
     div::before {
         content: ">";
         position: absolute;
@@ -21,7 +23,8 @@
     }
 }
 .about__div-img{
-    border-radius: 5px;    
+    max-width: 300px;
+    border-radius: 5px;
 }
 .about__img{
     width: 100%;
@@ -34,5 +37,25 @@
     &:hover{
         mix-blend-mode: normal;
         filter: none;
+    }
+}
+
+@media (max-width: 1080px) {
+    .about__content {
+        display: grid;
+        grid-template-columns: 6fr 4fr;
+    }
+
+}
+
+@media (max-width: 768px) {
+    .about__content {
+        display: grid;
+        grid-template-columns: repeat(1, minmax(0, 1fr));
+        gap: 0px;
+    }
+    .about__div-img{
+        width: 70%;
+        margin: 30px auto 0px;
     }
 }
