--- a/src/styles/components/_experience.scss
+++ b/src/styles/components/_experience.scss
@@ -1,10 +1,15 @@
+.experience__container {
+    display: grid;
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+    gap: 20px;
+}
+
 .experience__element {
     background-color: darken($color: $light-purple, $amount: 15);
     box-sizing: border-box;
     max-width: 350px;
     border-radius: 5px;
     padding: 20px;
-    margin-top: 20px;
     transition: all .3s ease-in-out;
     transform: translateY(0%);
 
@@ -36,13 +41,14 @@
 
 .experience__icon-external-link {
     width: 25px;
-    filter: $icon-primary
+    filter: $icon-primary;
 }
 
 .experience__icon-folder {
     width: 40px;
     transition: all .3s ease-in-out;
-    filter: $icon-primary
+    filter: $icon-primary;
+    cursor: pointer;
 }
 
 .experience__footer {
@@ -71,51 +77,85 @@
     background-color: rgba(0, 0, 0, 0.5);
     transition: all .3s ease-in-out;
 }
-.experience__modal-container{
+
+.experience__modal-container {
     background-color: $main-text;
     color: $primary;
     margin: auto;
-    padding: 20px;
+    padding: 10px 10px 30px 10px;
     border-radius: 5px;
-    width: 60%;
+    width: 65%;
     transition: all .3s ease-in-out;
     display: flex;
     flex-direction: column;
 }
-.experience__modal-close{
-    width: 50px;
+
+.expecience__modal-head{
+    width: 100%;
+    padding-bottom: 5px;
+    display: flex;
+    flex-direction: row;
+    p{
+        flex-grow: 3;
+        text-align: center;
+        margin: auto;
+        font-weight: bold;
+    }
+}
+
+.experience__modal-close {
+    width: 30px;
+    height: 30px;
     background-color: transparent;
     justify-content: center;
     cursor: pointer;
-    margin-bottom: 5px;
-    margin-right: 0;
-    margin-left:auto;
+    margin-bottom: 0px;
+    margin-right: 0px;
+    margin-left: auto;
 
 }
-.experience__carousel{
+
+.experience__icon-close {
+    width: 24px;
+    transition: all .3s ease-in-out;
+    filter: $icon-rev-color;
+    cursor: pointer;
+
+    &:hover {
+        width: 30px;
+        transform: translateX(-5px);
+        filter: $icon-rev-color-hover;
+    }
+}
+
+.experience__carousel {
     display: grid;
     grid-template-columns: auto auto auto;
     gap: 10px;
     justify-content: center;
     align-items: center;
 }
-.experience__carousel-slide{
+
+.experience__carousel-slide {
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
     background-color: black;
     transition: all .3s ease-in-out;
+
     img {
         width: 100%;
+        height: auto;
         object-fit: cover;
+        max-height: 350px;
     }
 }
 
-.experience__carousel-prev, .experience__carousel-next{
+.experience__prev-next {
     cursor: pointer;
     width: auto;
-    padding: 16px;
+    padding: 16px 10px;
     color: $light-purple;
     font-weight: bold;
     font-size: 18px;
@@ -123,19 +163,22 @@
     border-radius: 4px;
     user-select: none;
     border: solid $light-purple 2px;
-    &:hover{
+
+    &:hover {
         background-color: $primary;
         color: $main-text;
     }
 }
-.experience__carousel-selector{
-    // background-color: #ccc;
+
+.experience__carousel-selector {
+    margin-top: 25px;
     text-align: center;
 }
-.experience__carousel-quadrate{
+
+.experience__carousel-quadrate {
     // cursor: pointer;
     height: 6px;
-    width: 50px;
+    width: 20px;
     margin: 10px 4px 0px 4px;
     background-color: $primary;
     display: inline-block;
@@ -145,17 +188,73 @@
     //     background-color: $light-purple;
     // }
 }
-.active{
+
+.active {
     background-color: $light-purple;
 }
-.experience__paragraph{
+
+.experience__paragraph {
     width: 100%;
     margin-top: 15px;
+    padding: 0px 100px;
     text-align: center;
 }
 
-@media screen and (max-width:900px) {
-    .experience__modal-container{
-        width: 100%;
+@media (max-width: 1080px) {
+    .experience__modal-container {
+        width: 80%;
+    }
+
+    .experience__container {
+        max-width: 750px;
+        display: grid;
+        grid-template-columns: repeat(2, minmax(0, 1fr));
+        gap: 10px;
+        justify-items: center;
+    }
+
+    .experience__element {
+        margin-top: 10px;
+    }
+    .experience__paragraph {
+        padding: 0px 70px;
+    }
+}
+
+@media (max-width: 768px) {
+    .experience__modal-container {
+        width: 90%;
+        padding: 5px 5px 20px 5px;
+    }
+    .experience__carousel {
+        gap: 5px;
+    }
+    .experience__prev-next{
+        padding: 16px 5px;
+        font-size: 16px;
+    }
+    .experience__paragraph {
+        padding: 0px 50px;
+    }
+}
+
+@media (max-width: 480px) {
+    .experience__container {
+        display: grid;
+        grid-template-columns: repeat(1, minmax(0, 1fr));
+        gap: 0px;
+        justify-items: center;
+    }    
+    .experience__element {
+        margin-top: 15px;
+    }
+    .experience__prev-next{
+        display: none;
+    }
+    .experience__carousel-selector {
+        margin-top: 15px;
+    }
+    .experience__paragraph {
+        padding: 0px 25px;
     }
 }
