--- a/src/styles/components/_main.scss
+++ b/src/styles/components/_main.scss
@@ -2,15 +2,14 @@
     width: 100vw;
     min-height: 100vh;
     box-sizing: border-box;
-    padding-left: 200px;
-    padding-right: 200px;
+    padding: 0px 200px;
     margin: 0px auto;
 }
 
 .main__footer {
     display: flex;
     justify-content: center;
-    padding: 50px;
+    padding: 0px 0px 50px 0px;
     color: $main-text;
     font-size: 14px;
     font-family: $font-mono;
@@ -37,5 +36,31 @@
         img {
             filter: $icon-hover
         }
+    }
+}
+@media (max-width: 1080px) {
+    .main__container {
+        padding: 0px 100px;
+    }
+    .main__arrow-up {
+        right: 20px;
+    }
+}
+
+@media (max-width: 768px) {
+    .main__container {
+        padding: 0px 50px;
+    }
+    .main__arrow-up {
+        display: none;
+    }
+    .main__footer {
+        padding: 0px 0px 25px 0px;
+    }
+    
+}
+@media (max-width: 480px){
+    .main__container {
+        padding: 0px 25px;
     }
 }
