--- a/src/styles/components/_experience.scss
+++ b/src/styles/components/_experience.scss
@@ -82,20 +82,30 @@
     background-color: $main-text;
     color: $primary;
     margin: auto;
-    padding: 10px 10px 30px 10px;
+    padding: 0 0 30px 0;
     border-radius: 5px;
     width: 65%;
     transition: all .3s ease-in-out;
     display: flex;
     flex-direction: column;
+    // position: absolute;
+    max-width: 710px;
+
+    position: absolute;
+    // top: 0;
+    left: 0;
+    right: 0;
+    // bottom: 0;
+    margin: auto;
 }
 
-.expecience__modal-head{
+.expecience__modal-head {
     width: 100%;
     padding-bottom: 5px;
     display: flex;
     flex-direction: row;
-    p{
+
+    p {
         flex-grow: 3;
         text-align: center;
         margin: auto;
@@ -128,34 +138,33 @@
     }
 }
 
-.experience__carousel {
-    display: grid;
-    grid-template-columns: auto auto auto;
-    gap: 10px;
-    justify-content: center;
-    align-items: center;
-}
+
 
 .experience__carousel-slide {
     width: 100%;
+    min-height: max-content;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: black;
     transition: all .3s ease-in-out;
+    overflow-x: hidden;
+    padding: 0;
 
     img {
-        width: 100%;
         height: auto;
         object-fit: cover;
-        max-height: 350px;
+        max-height: 400px;
+        min-height: 350px;
     }
 }
+
 
 .experience__prev-next {
     cursor: pointer;
     width: auto;
-    padding: 16px 10px;
+    margin: auto;
+    padding: 30px 10px;
     color: $light-purple;
     font-weight: bold;
     font-size: 18px;
@@ -163,11 +172,26 @@
     border-radius: 4px;
     user-select: none;
     border: solid $light-purple 2px;
+    position: absolute;
+    opacity: 0.5;
+    // background-color: black;
+    // right: 0;
+    // left: 0;
+    // bottom: 0;
 
     &:hover {
         background-color: $primary;
         color: $main-text;
+        opacity: 0.8;
     }
+}
+
+.left {
+    left: 0;
+}
+
+.right {
+    right: 0;
 }
 
 .experience__carousel-selector {
@@ -176,17 +200,15 @@
 }
 
 .experience__carousel-quadrate {
-    // cursor: pointer;
-    height: 6px;
-    width: 20px;
-    margin: 10px 4px 0px 4px;
+    cursor: pointer;
+    height: 10px;
+    width: 30px;
+    margin: 0 4px 0 4px;
     background-color: $primary;
     display: inline-block;
     transition: all .3s ease-in-out;
     border-radius: 4px;
-    // &:hover{
-    //     background-color: $light-purple;
-    // }
+
 }
 
 .active {
@@ -195,9 +217,38 @@
 
 .experience__paragraph {
     width: 100%;
-    margin-top: 15px;
-    padding: 0px 100px;
-    text-align: center;
+    margin: 40px 0;
+    padding: 0 25px;
+    text-align: left;
+
+    span {
+        content: "";
+        width: 100%;
+        height: 1px;
+        display: block;
+        background-color: $primary;
+        opacity: 0.4;
+        transition: all .3s ease-in-out;
+        margin: 10px 0;
+    }
+}
+
+.experience__modal-footer{
+    width: 100%;
+    // background-color: black;
+    display: flex;
+    justify-content: end;
+    align-items: center;
+    padding: 10px 25px;
+    position: absolute;
+    bottom: 0;
+    transition: all .3s ease-in-out;
+}
+.expercience__modal-link{
+    text-decoration: none;
+    user-select: none;
+    border: 1px solid;
+    padding: 8px 10px;
 }
 
 @media (max-width: 1080px) {
@@ -216,25 +267,27 @@
     .experience__element {
         margin-top: 10px;
     }
-    .experience__paragraph {
-        padding: 0px 70px;
-    }
 }
 
 @media (max-width: 768px) {
     .experience__modal-container {
         width: 90%;
-        padding: 5px 5px 20px 5px;
+        padding: 0 0 20px 0;
     }
-    .experience__carousel {
-        gap: 5px;
-    }
-    .experience__prev-next{
+
+    .experience__prev-next {
         padding: 16px 5px;
         font-size: 16px;
     }
-    .experience__paragraph {
-        padding: 0px 50px;
+
+    .experience__carousel-slide {
+
+        img {
+            height: auto;
+            object-fit: cover;
+            max-height: 375px;
+            min-height: 0px;
+        }
     }
 }
 
@@ -244,17 +297,40 @@
         grid-template-columns: repeat(1, minmax(0, 1fr));
         gap: 0px;
         justify-items: center;
-    }    
+    }
+
     .experience__element {
         margin-top: 15px;
     }
-    .experience__prev-next{
-        display: none;
+    .experience__modal-container {
+        padding: 0 0 15px 0;
+        display: flex;
+        flex-direction: column;
+        // max-width: 710px;
+        width: 100%;
+        margin: 100px 0;
+        top: 0;
+        bottom: 0;
     }
+
+    .experience__carousel-slide {
+
+        img {
+            height: auto;
+            object-fit: cover;
+            max-height: 220px;
+            min-height: 0px;
+        }
+    }
+
     .experience__carousel-selector {
         margin-top: 15px;
     }
+
     .experience__paragraph {
-        padding: 0px 25px;
+        padding: 0 10px;
+    }
+    .experience__modal-footer{
+        padding: 10px;
     }
 }
