--- a/src/styles/components/_main.scss
+++ b/src/styles/components/_main.scss
@@ -38,12 +38,55 @@
         }
     }
 }
+
+.main__social-list {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    gap: 20px;
+    width: 24px;
+    height: auto;
+    left: 60px;
+    bottom: 0;
+    top: 0;
+    transition: all .3s ease-in-out;
+    transform: translateY(0%);
+
+    img {
+        transition: all .3s ease-in-out;
+        filter: $icon-primary;
+
+        &:hover {
+            transform: translateY(-10%);
+            filter: $icon-hover
+        }
+    }
+
+    &::before,
+    &::after {
+        content: "";
+        width: 1px;
+        height: 150px;
+        background-color: $main-text;
+        transition: all .3s ease-in-out;
+    }
+
+}
+
 @media (max-width: 1080px) {
     .main__container {
         padding: 0px 100px;
     }
+
     .main__arrow-up {
         right: 20px;
+    }
+
+    .main__social-list {
+        width: 20px;
+        left: 40px;
     }
 }
 
@@ -51,15 +94,37 @@
     .main__container {
         padding: 0px 50px;
     }
+
     .main__arrow-up {
         display: none;
     }
+
+    .main__social-list {
+        display: flex;
+        flex-direction: row;
+        position: relative;
+        gap: 20px;
+        width: auto;
+        height: 24px;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        margin-bottom: 20px;
+        &::before,
+        &::after {
+            width: 100px;
+            height: 1px;
+        }
+
+    }
+
     .main__footer {
         padding: 0px 0px 25px 0px;
     }
-    
+
 }
-@media (max-width: 480px){
+
+@media (max-width: 480px) {
     .main__container {
         padding: 0px 25px;
     }
