--- a/src/styles/components/_experience.scss
+++ b/src/styles/components/_experience.scss
@@ -52,8 +52,9 @@
 }
 
 .experience__footer {
-    display: flex;
-    justify-content: left;
+    position: absolute;
+    bottom: 0;
+    margin-bottom: 10px;
     font-size: 14px;
 
     span {
