The styles of the contact and experience sections have been changed

--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -6,8 +6,12 @@ $font-cal: "Calibre", "Inter", "San Francisco", "SF Pro Text", -apple-system, sy
 
 // Colors
 $primary: #2C0042;
+// $primary: #440A67;
 $light-purple: #93329E;
 $main-text: #B4AEE8;
+
+// $orange: #E04D01;
+$orange: #f16b28;
 
 // Icons colors
 $icon-primary: invert(77%) sepia(3%) saturate(3453%) hue-rotate(206deg) brightness(92%) contrast(98%);
