--- a/src/styles/components/_about.scss
+++ b/src/styles/components/_about.scss
@@ -7,6 +7,7 @@
 .about__skills-list {
     display: grid;
     grid-template-columns: repeat(2, minmax(80px, 200px));
+    color: white;
     gap: 5px 10px;
     padding: 0px;
     margin: 20px 20px 0px;
