--- a/src/styles/components/_contact.scss
+++ b/src/styles/components/_contact.scss
@@ -10,24 +10,16 @@
     width: 100%;
     align-items: center;
     position: relative;
-    margin: 20px 0px 40px;
+    margin: 0px 0px 40px;
     font-size: 25px;
     white-space: nowrap;
+    color: lighten($color: $primary, $amount: 15);
     transition: all .3s ease-in-out;
-    &::before, &::after {
-        content: "";
-        width: 160px;
-        height: 1px;
-        display: block;
-        position: relative;
-        background-color: white;
-        margin-right: 10px;
-        margin-left: 10px;
-        transition: all .3s ease-in-out;
-    }
 }
 
 .contact__content {
+    // color: $orange;
+    color: darken($color: $orange, $amount: 10);
     p {
         margin: 0px 0px 30px;
         max-width: 600px;
@@ -57,12 +49,18 @@
     outline: none;
     padding: 10px;
     margin-bottom: 10px;
-    background-color: darken($color: $light-purple, $amount: 15);
-    color: $main-text;
+    // background-color: darken($color: $light-purple, $amount: 15);
+    // background-color: darken($color: $orange, $amount: 10);
+    background-color: $main-text;
+    // background-color: $orange;
+    // color: $main-text;
+    color: lighten($color: $primary, $amount: 15);
     border: 0px;
 
     &::placeholder {
-        color: $main-text;
+        // color: $main-text;
+        color: $light-purple;
+        // color: $primary;
         opacity: 0.7;
     }
 }
@@ -70,12 +68,14 @@
 .contact__textarea {
     @extend .contact__input;
     height: 100px;
+    resize: none;
 }
 
 .contact__submit {
     background-color: transparent;
     border-radius: 1px;
-    border: 1px solid $main-text;
+    // border: 1px solid $main-text;
+    border: 1px solid lighten($color: $primary, $amount: 15);
     font-size: 16px;
     font-weight: bold;
     color: $light-purple;
@@ -87,8 +87,11 @@
     transition: all .3s ease-in-out;
 
     &:hover {
-        background-color: $main-text;
-        color: darken($color: $light-purple, $amount: 20);
+        // background-color: $main-text;
+        // color: darken($color: $light-purple, $amount: 20);
+        background-color: lighten($color: $orange, $amount: 5);
+        color: $primary;
+        // color: $main-text;
     }
 }
 
@@ -115,14 +118,5 @@
     }
     .contact__section{
         display: block;
-    }
-    .contact__title {
-        &::before {
-            width: 0px;
-        }
-
-        &::after {
-            width: 100%;
-        }
     }
 }
