The contact form was finished, some styling details were finished and some console log and comments were removed

--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -9,8 +9,6 @@ $primary: #2C0042;
 // $primary: #440A67;
 $light-purple: #93329E;
 $main-text: #B4AEE8;
-
-// $orange: #E04D01;
 $orange: #f16b28;
 
 // Icons colors
@@ -19,20 +17,4 @@ $icon-hover: invert(88%) sepia(3%) saturate(3453%) hue-rotate(206deg) brightness
 
 $icon-rev-color: invert(4%) sepia(48%) saturate(7377%) hue-rotate(282deg) brightness(104%) contrast(113%);
 $icon-rev-color-hover: invert(21%) sepia(73%) saturate(2189%) hue-rotate(275deg) brightness(95%) contrast(87%);
-// $icon-hover: invert(23%) sepia(69%) saturate(1757%) hue-rotate(269deg) brightness(98%) contrast(93%);
-
-// $primary: #2C0042;
-// $light-purple: #C3A9D0;
-// $main-text: #DEC6E9;
-
-
-// #2C0042 #93329E #B4AEE8  Primera paleta
-// #440A67 #93329E #B4AEE8  Paleta alternativa
-// #4C0070 #8A00CF #750C4C  Tonos para testear
-/* color:#D07BFB; */
-/* color: #C3A9D0; posible logo */
-/* color: #DEC6E9; */
-
-// color: #4a2667; background
-// background: linear-gradient(135deg, #aa3bb1, #582a7e);
-// color: #51256f; text
+$icon-orange: invert(49%) sepia(46%) saturate(1892%) hue-rotate(344deg) brightness(97%) contrast(95%);
