--- a/src/styles/components/_contact.scss
+++ b/src/styles/components/_contact.scss
@@ -18,7 +18,6 @@
 }
 
 .contact__content {
-    // color: $orange;
     color: darken($color: $orange, $amount: 10);
     p {
         margin: 0px 0px 30px;
@@ -49,19 +48,21 @@
     outline: none;
     padding: 10px;
     margin-bottom: 10px;
-    // background-color: darken($color: $light-purple, $amount: 15);
-    // background-color: darken($color: $orange, $amount: 10);
     background-color: $main-text;
-    // background-color: $orange;
-    // color: $main-text;
     color: lighten($color: $primary, $amount: 15);
     border: 0px;
 
     &::placeholder {
-        // color: $main-text;
         color: $light-purple;
-        // color: $primary;
         opacity: 0.7;
+    }
+    &:focus{
+        background-color: lighten($color: $primary, $amount: 15);
+        color: $main-text;
+        &::placeholder{
+            color: white;
+            opacity: 0.7;
+        }
     }
 }
 
@@ -74,7 +75,6 @@
 .contact__submit {
     background-color: transparent;
     border-radius: 1px;
-    // border: 1px solid $main-text;
     border: 1px solid lighten($color: $primary, $amount: 15);
     font-size: 16px;
     font-weight: bold;
@@ -87,24 +87,86 @@
     transition: all .3s ease-in-out;
 
     &:hover {
-        // background-color: $main-text;
-        // color: darken($color: $light-purple, $amount: 20);
         background-color: lighten($color: $orange, $amount: 5);
         color: $primary;
-        // color: $main-text;
     }
 }
 
 .contact__span-error {
-    margin-bottom: 20px;
+    margin-top: -5px;
     font-size: 12px;
     font-weight: bold;
+    padding-bottom: 10px;
+    color: $primary;
 }
 
 .contact__success-message {
     span {
-
         vertical-align: middle;
+        color: $orange;
+    }
+}
+
+//MODAL
+
+.contact__success-modal {
+    display: block;
+    position: fixed;
+    left: 0;
+    top: 0;
+    z-index: 30;
+    padding-top: 100px;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.5);
+    transition: all .3s ease-in-out;
+}
+.contact__modal-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: absolute;
+    padding: 5px 0 0 0;
+    background-color: $primary;
+    box-shadow: 0 10px 30px -10px rgba(2, 12, 27, 0.7);
+    color: $main-text;
+    border-radius: 5px;
+    transition: all .3s ease-in-out;
+    max-width: 350px;
+    max-height: max-content;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+    h3{
+        padding: 0 0 10px 0;
+        color: lighten($color: $main-text, $amount: 10);
+    }
+    p{
+        padding: 15px 20px;
+    }
+}
+.contact__modal-close {
+    width: 30px;
+    height: 30px;
+    background-color: transparent;
+    justify-content: center;    
+    margin-bottom: 0;
+    margin-right: 0;
+    margin-left: auto;
+
+}
+.contact__icon-close {
+    width: 24px;
+    transition: all .3s ease-in-out;
+    filter: $icon-orange;
+    cursor: pointer;
+
+    &:hover {
+        filter: $icon-hover;
     }
 }
 
