--- a/src/styles/components/_experience.scss
+++ b/src/styles/components/_experience.scss
@@ -25,12 +25,10 @@
         color: $light-purple;
 
         h3 {
-            // color: lighten($color: $main-text, $amount: 15);
             color: $primary;
         }
 
         .experience__icon-folder {
-            // filter: $icon-hover
             filter: $icon-rev-color;
         }
         .experience__icon-external-link {
@@ -58,7 +56,6 @@
 .experience__icon-folder {
     width: 40px;
     transition: all .3s ease-in-out;
-    // filter: $icon-primary;
     filter: $icon-hover;
     cursor: pointer;
 }
@@ -68,7 +65,7 @@
     bottom: 0;
     margin-bottom: 10px;
     font-size: 14px;
-    // color: $orange;
+    color: lighten($color: $main-text, $amount: 10);
 
     span {
         padding-right: 10px;
@@ -102,14 +99,11 @@
     transition: all .3s ease-in-out;
     display: flex;
     flex-direction: column;
-    // position: absolute;
     max-width: 710px;
 
     position: absolute;
-    // top: 0;
     left: 0;
     right: 0;
-    // bottom: 0;
     margin: auto;
 }
 
@@ -146,8 +140,6 @@
     cursor: pointer;
 
     &:hover {
-        width: 30px;
-        transform: translateX(-5px);
         filter: $icon-rev-color-hover;
     }
 }
@@ -187,11 +179,7 @@
     user-select: none;
     border: solid $light-purple 2px;
     position: absolute;
-    opacity: 0.5;
-    // background-color: black;
-    // right: 0;
-    // left: 0;
-    // bottom: 0;
+    opacity: 0.6;
 
     &:hover {
         background-color: $primary;
@@ -249,7 +237,6 @@
 
 .experience__modal-footer{
     width: 100%;
-    // background-color: black;
     display: flex;
     justify-content: end;
     align-items: center;
@@ -325,7 +312,6 @@
         padding: 0 0 15px 0;
         display: flex;
         flex-direction: column;
-        // max-width: 710px;
         width: 100%;
         margin: 100px 0;
         top: 0;
