--- a/src/styles/components/_main.scss
+++ b/src/styles/components/_main.scss
@@ -2,8 +2,8 @@
     width: 100vw;
     min-height: 100vh;
     box-sizing: border-box;
-    padding: 0px 200px;
-    margin: 0px auto;
+    padding: 0 200px;
+    margin: 0 auto;
 }
 
 .main__separation {
@@ -19,7 +19,7 @@
     width: 100vw;
     box-sizing: border-box;
     padding: 0 200px;
-    margin: 0px auto;
+    margin: 0 auto;
     background-color: white;
 }
 
@@ -28,11 +28,9 @@
     display: flex;
     margin: auto;
     background-color: white;
-    // align-content: center;
     align-items: center;
     justify-content: center;
     padding: 0 0 50px 0;
-    // color: $main-text;
     color: lighten($color: $primary, $amount: 15);
     font-size: 14px;
     font-family: $font-mono;
@@ -57,8 +55,7 @@
         transform: translateY(-5%);
 
         img {
-            // filter: $icon-hover;
-            filter: $icon-rev-color-hover;
+            filter: $icon-orange;
         }
     }
 }
@@ -85,8 +82,7 @@
 
         &:hover {
             transform: translateY(-10%);
-            // filter: $icon-hover;
-            filter: $icon-rev-color-hover;
+            filter: $icon-orange;
         }
     }
 
