Modified some styles and added logo to navbar

--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -10,6 +10,7 @@ $primary: #2C0042;
 $light-purple: #93329E;
 $main-text: #B4AEE8;
 $orange: #f16b28;
+$white: #FFFFFF;
 
 // Icons colors
 $icon-primary: invert(77%) sepia(3%) saturate(3453%) hue-rotate(206deg) brightness(92%) contrast(98%);
