--- a/src/styles/components/_experience.scss
+++ b/src/styles/components/_experience.scss
@@ -171,13 +171,13 @@
     width: auto;
     margin: auto;
     padding: 30px 10px;
-    color: $light-purple;
+    color: $orange;
     font-weight: bold;
     font-size: 18px;
     transition: all 0.3s ease-in-out;
-    border-radius: 4px;
+    border-radius: 3px;
     user-select: none;
-    border: solid $light-purple 2px;
+    border: solid $orange 2px;
     position: absolute;
     opacity: 0.6;
 
