--- a/src/styles/components/_home.scss
+++ b/src/styles/components/_home.scss
@@ -16,7 +16,7 @@
         margin: 0px;
         font-size: 60px;
         line-height: 1.2;
-        color: lighten($color: $main-text, $amount: 5);
+        color: $white;
         font-family: $font-mono;
     }
     p {
