--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -28,6 +28,7 @@ section {
     width: 100%;
     align-items: center;
     position: relative;
+    color: $white;
     margin: 10px 0px 40px;
     font-size: 25px;
     white-space: nowrap;
@@ -38,7 +39,7 @@ section {
         height: 1px;
         display: block;
         position: relative;
-        background-color: white;
+        background-color: $white;
         margin-right: 10px;
         transition: all .3s ease-in-out;
     }
@@ -48,7 +49,7 @@ section {
         height: 1px;
         display: block;
         position: relative;
-        background-color: white;
+        background-color: $white;
         margin-left: 10px;
         transition: all .3s ease-in-out;
     }
