--- a/src/styles/components/_about.scss
+++ b/src/styles/components/_about.scss
@@ -34,7 +34,7 @@
     mix-blend-mode: hard-light;
     border-radius: 5px;
     transition: all .5s ease-in-out;
-    filter: grayscale(80%) contrast(0.8);
+    filter: grayscale(60%) contrast(0.8) sepia(0.6);
     &:hover{
         mix-blend-mode: normal;
         filter: none;
